# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
gendiff/scripts/: gendiff.py
